# manta-wallet

./: .gitignore  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ctx.rs  error.rs  event.rs  main.rs  model.rs
src/components/: ColorSchemeToggle.tsx  Dashboard.tsx  Home.tsx  Login.tsx  NavBar.tsx  NewUser.tsx  Utilities.tsx  Wallet.tsx  index.ts
src/pages/: NotFound.tsx  _app.tsx  index.tsx
src/pages/api/: chat.ts
src/pages/api/auth/: [...nextauth].ts
src/pages/apps/: index.tsx  kplc.tsx  loan.tsx  news.tsx  soko.tsx  task.tsx  taxi.tsx
src/pages/cards/: index.tsx
src/pages/chat/: ChatLine.tsx  index.tsx
src/pages/contacts/: index.tsx
src/pages/dashboard/: index.tsx
src/pages/wallet/: Card.tsx  Contact.tsx  Deposit.tsx  Send.tsx  Withdraw.tsx  index.tsx
src/routes/: index.tsx
src/server/: _app.ts  context.ts  prisma.ts  trpc.ts
src/server/routers/: account.ts  auth.ts  card.ts  chat.ts  contact.ts  index.ts  payment.ts  user.ts
src/utils/: trpc.ts
