[package]
name = "manta-wallet"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
parking_lot = "0.12.1"
modql = "0.2.0"
ts-rs = "6.2.1"
reqwest = { version = "0.11.18", features = ["json"] }
axum = "0.6.18"

[dev-dependencies]
anyhow = "1.0.71"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
